After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790812 - dashdemux: Segmentation fault coredump issue with xlink external AdaptationSet
dashdemux: Segmentation fault coredump issue with xlink external AdaptationSet
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal critical
: 1.12.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-25 07:11 UTC by Jun Xie
Modified: 2017-12-06 20:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
external AdaptationSet MPD file (407 bytes, text/plain)
2017-11-25 07:14 UTC, Jun Xie
  Details
original MPD file (please change the xlink to your http server address) (842 bytes, application/xml)
2017-11-25 07:15 UTC, Jun Xie
  Details
fix wrong AdaptationSet list iterator (1.41 KB, patch)
2017-11-25 07:16 UTC, Jun Xie
committed Details | Review

Description Jun Xie 2017-11-25 07:11:19 UTC
while playback a MPD with external AdaptationSet, coredump with Segmentation fault.


Thread 2 "source:src" received signal SIGSEGV, Segmentation fault.

Thread 140737282795264 (LWP 3729)

  • #0 _int_malloc
    at malloc.c line 3378
  • #1 __GI___libc_malloc
    at malloc.c line 2913
  • #2 g_malloc
    at gmem.c line 94
  • #3 g_uri_unescape_segment
    at gurifuncs.c line 99
  • #4 g_uri_unescape_string
    at gurifuncs.c line 161
  • #5 _gst_uri_string_to_list
    at gsturi.c line 1309
  • #6 gst_uri_from_string
    at gsturi.c line 1587
  • #7 gst_mpd_client_fetch_external_adaptation_set
    at gstmpdparser.c line 4567
  • #8 gst_mpd_client_fetch_on_load_external_resources
    at gstmpdparser.c line 3707

Comment 1 Jun Xie 2017-11-25 07:14:58 UTC
Created attachment 364378 [details]
external AdaptationSet MPD file
Comment 2 Jun Xie 2017-11-25 07:15:21 UTC
Created attachment 364379 [details]
original MPD file (please change the xlink to your http server address)
Comment 3 Jun Xie 2017-11-25 07:16:01 UTC
Created attachment 364380 [details] [review]
fix wrong AdaptationSet list iterator
Comment 4 Jun Xie 2017-11-25 07:16:17 UTC
patch attached, please review
Comment 5 Jun Xie 2017-12-06 09:07:55 UTC
please review this patch, thanks:)
Comment 6 Nicolas Dufresne (ndufresne) 2017-12-06 20:18:24 UTC
I confirm this crash.
Comment 7 Nicolas Dufresne (ndufresne) 2017-12-06 20:21:33 UTC
Review of attachment 364380 [details] [review]:

Wow, quite a terrible bug.
Comment 8 Nicolas Dufresne (ndufresne) 2017-12-06 20:23:07 UTC
Thanks, commited attachement @364380 as 77321f6
Comment 9 Nicolas Dufresne (ndufresne) 2017-12-06 20:24:13 UTC
Also in 1.12 branch as 6fc18cd