dashdemux: fix coredump issue with external AdaptationSet

fix wrong AdaptationSet list iterator

https://bugzilla.gnome.org/show_bug.cgi?id=790812